--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 title: Home
 layout: default
-quote-of-the-day: Set your heart upon your work but never its reward.
-quote-by: Krishna
+quote-of-the-day: Si tu lis cette citation de moi sur Internet, c'est probablement qu'elle est fausse
+quote-by: Albert Einstein
 ---
 
 <div class="row first-row">
