--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ quote-by: Albert Einstein
     </a>
     
     <a href="{{site.baseurl}}{{site.posts[2].url}}">
-    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/{{site.posts[2].img}});"> 
+    <div class="eight columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/{{site.posts[2].img}});"> 
     <p class="news-title">{{site.posts[2].title}}</p>
     <p class="news-exp">{{site.posts[2].excerpt | strip_html | truncate: 80 }}</p>
     </div>
