--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 title: Home
 layout: default
 quote-of-the-day: L'énergie d'une ouverture
-quote-by: Albert Einstein
-img-coaching: phare.png
-img-formation: phare.png
-img-dev-perso: phare.png
+quote-by: 
+img-coaching: rose-des-vents-c.JPG
+img-formation: kapla-c.JPG
+img-dev-perso: arb+roc-cf.jpg
 ---
 
 <div class="row first-row">
