--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@ quote-by:
 img-coaching: rose-des-vents-c.JPG
 img-formation: kapla-c.JPG
 img-dev-perso: arb+roc-cf.jpg
+img-une: feu artificee-c.JPG
+img-analyse-des-pratiques: sculpture-c.jpg
 ---
 
 <div class="row first-row">
 {% assign post = site.tags.a-la-une[0] %}
 <a href="{{site.baseurl}}{{post.url}}">
-        <div class="eight columns news-piece news-piece-1 border" style="background-image: url({{site.baseurl}}/img/{{post.img}})">
+        <div class="eight columns news-piece news-piece-1 border" style="background-image: url({{site.baseurl}}/img/{{page.img-une}})">
         <p class="news-title">{{post.title}}</p>
         <p class="news-exp">{{post.excerpt | strip_html | truncate: 80 }}</p>
         </div>
@@ -40,7 +42,7 @@ img-dev-perso: arb+roc-cf.jpg
     
     {% assign post = site.tags.analyse-des-pratiques[0] %}
     <a href="{{site.baseurl}}{{post.url}}">
-    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/{{post.img}});"> 
+    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/{{page.img-analyse-des-pratiques}});"> 
     <p class="news-title">{{post.title}}</p>
     <p class="news-exp">{{post.excerpt | strip_html | truncate: 80 }}</p>
     </div>
