--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ quote-of-the-day: L'énergie d'une ouverture
 quote-by: 
 img-coaching: rose-des-vents-c.JPG
 img-formation: kapla-c.JPG
-img-dev-perso: phare.png
+img-dev-perso: arb+roc-cf.jpg
 img-une: feu artificee-c.JPG
 img-analyse-des-pratiques: sculpture-c.jpg
 ---
