--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ img-analyse-des-pratiques: sculpture-c.jpg
 <div class="row first-row">
 {% assign post = site.tags.a-la-une[0] %}
 <a href="{{site.baseurl}}{{post.url}}">
-        <div class="eight columns news-piece news-piece-1 border" style="background-image: url({{site.baseurl}}/img/{{page.img-une}})">
+        <div class="eight columns news-piece news-piece-1 border" style="background-image: url({{site.baseurl}}/img/{{page.img}})">
         <p class="news-title">{{post.title}}</p>
         <p class="news-exp">{{post.excerpt | strip_html | truncate: 80 }}</p>
         </div>
@@ -42,7 +42,7 @@ img-analyse-des-pratiques: sculpture-c.jpg
     
     {% assign post = site.tags.analyse-des-pratiques[0] %}
     <a href="{{site.baseurl}}{{post.url}}">
-    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/{{page.img-analyse-des-pratiques}});"> 
+    <div class="four columns news-piece news-piece-2" style="background-image: url({{site.baseurl}}/img/{{page.img}});"> 
     <p class="news-title">{{post.title}}</p>
     <p class="news-exp">{{post.excerpt | strip_html | truncate: 80 }}</p>
     </div>
