--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Home
 layout: default
-quote-of-the-day: L'énergie d'une ouverture
+quote-of-the-day: l'énergie d'une ouverture
 quote-by: 
 img-coaching: rose-des-vents-c.JPG
 img-formation: kapla-c.JPG
