--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ title: Home
 layout: default
 quote-of-the-day: l'énergie d'une ouverture
 quote-by: 
-img-coaching: rose-des-vents-c.JPG
-img-formation: kapla-c.JPG
-img-dev-perso: arb+roc-cf.jpg
+img-coaching: rose-des-vents.jpg
+img-formation: kapla.jpg
+img-dev-perso: arb+roc.jpg
 ---
 
 <div class="row first-row">
