--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ img-dev-perso: arb+roc.jpg
 
 <a href="#coaching">
     <div class="four columns news-piece news-piece-1" style="background-image: url({{site.baseurl}}/img/{{page.img-coaching}});">
-     <p class="news-title">Coaching</p>
+     <p class="news-title">coaching</p>
     </div>
 </a>
 
@@ -28,13 +28,13 @@ img-dev-perso: arb+roc.jpg
    
    <a href="#formation">
     <div class="four columns news-piece news-piece-2 border-2" style="background-image: url({{site.baseurl}}/img/{{page.img-formation}});">
-    <p class="news-title">Formation</p>
+    <p class="news-title">formation</p>
     </div>
      </a>
      
     <a href="#dev-perso">
     <div class="four columns news-piece news-piece-2 border" style="background-image: url({{site.baseurl}}/img/{{page.img-dev-perso}});"> 
-    <p class="news-title">Développement personnel</p>
+    <p class="news-title">développement personnel</p>
     </div>
     </a>
     
