--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ quote-of-the-day: l'énergie d'une ouverture
 quote-by: 
 img-coaching: rose-des-vents.jpg
 img-formation: kapla.jpg
-img-dev-perso: arb+roc.jpg
+img-dev-perso: pousse.jpg
 ---
 
 <div class="row first-row">
