--- a/index.html
+++ b/index.html
@@ -6,20 +6,28 @@ quote-by:
 img-coaching: rose-des-vents.jpg
 img-formation: kapla.jpg
 img-dev-perso: pousse.jpg
+img-diastole: sculpture.jpg
 ---
 
 <div class="row first-row">
 {% assign post = site.tags.a-la-une[0] %}
 <a href="{{site.baseurl}}{{post.url}}">
-        <div class="eight columns news-piece news-piece-1 border" style="background-image: url({{site.baseurl}}/img/{{post.img}})">
+        <div class="five columns news-piece news-piece-1 border-2" style="background-image: url({{site.baseurl}}/img/{{post.img}})">
         <p class="news-title">{{post.title}}</p>
         <p class="news-exp">{{post.excerpt | strip_html | truncate: 80 }}</p>
         </div>
 </a>
 
 <a href="#coaching">
-    <div class="four columns news-piece news-piece-1" style="background-image: url({{site.baseurl}}/img/{{page.img-coaching}});">
+    <div class="four columns news-piece news-piece-1 border" style="background-image: url({{site.baseurl}}/img/{{page.img-coaching}});">
      <p class="news-title">coaching</p>
+    </div>
+</a>
+{% assign post = site.tags.diastole[0] %}
+<a href="{{site.baseurl}}{{post.url}}">
+    <div class="three columns news-piece news-piece-1" style="background-image: url({{site.baseurl}}/img/{{page.img-diastole}});">
+        <p class="news-title">{{post.title}}</p>
+        <p class="news-exp">{{post.excerpt | strip_html | truncate: 80 }}</p>
     </div>
 </a>
 
@@ -115,7 +123,7 @@ img-dev-perso: pousse.jpg
 
     {% assign post = site.tags.dev-perso1[0] %}
     <a href="{{site.baseurl}}{{post.url}}">
-        <div class="six columns news-piece news-piece-2 border" style="background-image:url({{site.baseurl}}/img/{{post.img}})">
+        <div class="seven columns news-piece news-piece-2 border" style="background-image:url({{site.baseurl}}/img/{{post.img}})">
             <p class="news-title">{{post.title}}</p>
         <p class="news-exp">{{post.excerpt | strip_html | truncate: 80 }}</p>
         </div>
@@ -124,7 +132,7 @@ img-dev-perso: pousse.jpg
 
     {% assign post = site.tags.dev-perso2[0] %}
     <a href="{{site.baseurl}}{{post.url}}">
-        <div class="six columns news-piece news-piece-2" style="background-image:url({{site.baseurl}}/img/{{post.img}})">
+        <div class="five columns news-piece news-piece-2" style="background-image:url({{site.baseurl}}/img/{{post.img}})">
             <p class="news-title">{{post.title}}</p>
         <p class="news-exp">{{post.excerpt | strip_html | truncate: 80 }}</p>
         </div>
