--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ quote-by:
 img-coaching: rose-des-vents.jpg
 img-formation: kapla.jpg
 img-dev-perso: pousse.jpg
-img-diastole: sculpture.jpg
+img-diastole: coeur.jpg
 ---
 
 <div class="row first-row">
